<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#222328">
    <!--    android:background="@drawable/unsplash1"-->

    <ImageView
        android:id="@+id/ivAppIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:srcCompat="@drawable/ic_public_black_24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/tvAppName"
        android:layout_marginLeft="100dp"
        android:tint="#fff"/>

    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/c19_support"
        android:textColor="#fff"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="24dp"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/tvH1"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:letterSpacing="0.13"
        android:text="@string/connect_with_your_local_community"
        android:textColor="#fff"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAppName"
        app:layout_goneMarginTop="50dp" />

    <TextView
        android:id="@+id/tvH2"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/real_time_stats_up_to_date_health_info_connect_with_community"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="#fff"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvH1" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_1"
        android:paddingLeft="70dp"
        android:paddingRight="70dp"
        android:layout_marginTop="20dp"
        android:text="@string/log_in"
        android:textColor="#fff"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnGetStart"/>

    <Button
        android:id="@+id/btnGetStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_2"
        android:layout_marginTop="400dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:text="@string/get_started"
        android:textColor="#222328"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAppName" />

<!--    <ImageView-->
<!--        android:id="@+id/imageView5"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="0dp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.0"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.0"-->
<!--        app:srcCompat="@drawable/unsplash1" />-->

</androidx.constraintlayout.widget.ConstraintLayout>