<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/md15dp"
    android:background="#fff">

    <TextView
        android:id="@+id/tvCaseSummery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Case Summery:"
        android:textColor="#000"
        android:textSize="23sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
        android:id="@+id/txLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#fff"
        android:background="@drawable/button_4"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:layout_marginTop="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        android:textAllCaps="false"
        android:text="Click to choose State"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:paddingTop="12dp"
        android:id="@+id/tvIntroduction"
        android:textColor="#000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/here_is_covid_19_data_in_the_state_of_washington"
        app:layout_constraintTop_toBottomOf="@id/tvCaseSummery"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/tvCdc"
        android:paddingTop="3dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:text="@string/the_data_below_is_provided_by_cdc"
        app:layout_constraintTop_toBottomOf="@id/tvIntroduction"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/txChoose"
        android:paddingTop="3dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCdc" />

    <TableLayout
        android:layout_marginTop="10dp"
        android:id="@+id/tb1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txChoose"
        app:layout_constraintLeft_toLeftOf="parent">

        <TableRow
            android:weightSum="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:clickable="true"
                android:gravity="center"
                android:layout_weight="0.25"
                android:background="#F2F2F2"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/positive"
                android:focusable="true" />

            <TextView
                android:background="#F2F2F2"
                android:gravity="center"
                android:id="@+id/tvPositive"
                android:textColor="#E34C4F"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="0.25"
                android:text="@string/_0" />


            <TextView
                android:focusable="true"
                android:clickable="true"
                android:gravity="center"
                android:layout_weight="0.25"
                android:background="#F2F2F2"
                android:layout_height="30dp"
                android:layout_width="wrap_content"
                android:text="@string/recovered_2" />

            <TextView
                android:background="#F2F2F2"
                android:gravity="center"
                android:textColor="#4C7F1A"
                android:id="@+id/tvRecovered"
                android:layout_weight="0.25"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/_0"/>

        </TableRow>

        <TableRow
            android:weightSum="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:focusable="true"
                android:clickable="true"
                android:gravity="center"
                android:layout_weight="0.25"
                android:background="@drawable/border_bottom"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/in_hospital"/>

            <TextView
                android:gravity="center"
                android:textColor="#133DAE"
                android:background="@drawable/border_bottom"
                android:id="@+id/tvHospitalized"
                android:layout_weight="0.25"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/_0"/>


            <TextView
                android:focusable="true"
                android:clickable="true"
                android:gravity="center"
                android:background="@drawable/border_bottom"
                android:layout_weight="0.25"
                android:layout_height="30dp"
                android:layout_width="wrap_content"
                android:text="@string/death" />

            <TextView
                android:gravity="center"
                android:id="@+id/tvDeath"
                android:background="@drawable/border_bottom"
                android:layout_weight="0.25"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/_0"/>

        </TableRow>

    </TableLayout>

    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/tvCompare"
        android:textColor="#000"
        android:layout_width="wrap_content"
        android:text="@string/compare_with_yesterday"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tb1"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TableLayout
        android:id="@+id/tv2"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvCompare"
        app:layout_constraintLeft_toLeftOf="parent">

    <TableRow
        android:weightSum="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <TextView
            android:focusable="true"
            android:clickable="true"
            android:gravity="center"
            android:background="#F2F2F2"
            android:layout_weight="0.25"
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_positive"/>

        <TextView
            android:gravity="center"
            android:background="#F2F2F2"
            android:textColor="#E34C4F"
            android:id="@+id/tvNewPositive"
            android:layout_weight="0.25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/_0"/>


        <TextView
            android:focusable="true"
            android:clickable="true"
            android:gravity="center"
            android:padding="5dp"
            android:background="#F2F2F2"
            android:layout_weight="0.25"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/new_death" />

        <TextView
            android:gravity="center"
            android:background="#F2F2F2"
            android:id="@+id/tvNewDeath"
            android:padding="5dp"
            android:layout_weight="0.25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"/>

    </TableRow>
</TableLayout>

    <com.github.mikephil.charting.charts.LineChart
        android:layout_marginTop="15dp"
        android:id="@+id/chart"
        android:layout_width="357dp"
        android:layout_height="263dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv2" />

</androidx.constraintlayout.widget.ConstraintLayout>