<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#222328"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:textSize="24sp"
        android:layout_marginTop="100dp"
        android:textColor="#fff"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="18dp"
        android:layout_marginTop="50dp"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/grey"
        android:textColor="@color/grey"
        android:background="@drawable/text_box_top"
        android:textSize="14sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toBottomOf="@id/tvLogin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <EditText
        android:id="@+id/etPassword2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/grey"
        android:textColor="@color/grey"
        android:inputType="textPassword"
        android:textSize="14sp"
        android:padding="18dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/text_box_bottom"
        android:hint="@string/password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etUsername"/>

    <TextView
    android:id="@+id/tvForgotPassword"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/forgot_password"
    android:textSize="12sp"
    android:layout_marginTop="20dp"
    android:textColor="#fff"
    app:layout_constraintTop_toBottomOf="@id/etPassword2"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/tvCreateAccount2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Don't have an account yet? Create account"
        android:textSize="12sp"
        android:layout_marginTop="15dp"
        android:textColor="#fff"
        app:layout_constraintTop_toBottomOf="@id/tvForgotPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/btnLogin2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:paddingLeft="80dp"
        android:paddingRight="80dp"
        android:textColor="#fff"
        android:background="@drawable/button_1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPassword2"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>