<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#222328"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<!--    <ProgressBar-->
<!--        android:id="@+id/indeterminateBar"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintLeft_toLeftOf="parent"-->
<!--        app:layout_constraintRight_toRightOf="parent"-->
<!--        />-->

    <TextView
        android:id="@+id/tvCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:textSize="24sp"
        android:layout_marginTop="100dp"
        android:textColor="#fff"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/grey"
        android:textColor="@color/grey"
        android:padding="18dp"
        android:inputType="textEmailAddress"
        android:layout_marginTop="50dp"
        android:hint="@string/email"
        android:background="@drawable/text_box_top"
        android:textSize="14sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toBottomOf="@id/tvCreateAccount"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <EditText
        android:id="@+id/etPassword"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/grey"
        android:textColor="@color/grey"
        android:textSize="14sp"
        android:padding="18dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/text_box_bottom"
        android:hint="@string/password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etEmail"/>

    <TextView
    android:id="@+id/tvLogin1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="Already have an account? Log in"
    android:textSize="12sp"
    android:layout_marginTop="20dp"
    android:textColor="#fff"
    app:layout_constraintTop_toBottomOf="@id/etPassword"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/btnCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:paddingLeft="80dp"
        android:paddingRight="80dp"
        android:textColor="#fff"
        android:background="@drawable/button_1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPassword"
        app:layout_constraintBottom_toBottomOf="parent"/>

<!--    <FrameLayout-->
<!--        android:id="@+id/frameLayout"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent">-->
<!--    </FrameLayout>-->
</androidx.constraintlayout.widget.ConstraintLayout>